# AIML-Projects

./: README.md
ai-interview-copilot/: .gitignore  README.md  docker-compose.yml
ai-interview-copilot/backend/: .env.example  Makefile  alembic.ini  pyproject.toml
ai-interview-copilot/backend/alembic/: script.py.mako
ai-interview-copilot/backend/alembic/versions/: 001_initial.py
ai-interview-copilot/backend/src/: config.py  main.py
ai-interview-copilot/backend/src/api/: routes.py  schemas.py
ai-interview-copilot/backend/src/db/: models.py  repository.py
ai-interview-copilot/backend/src/interview/: engine.py  evaluator.py  feedback.py  prompts.py  question_generator.py
ai-interview-copilot/backend/src/llm/: client.py
ai-interview-copilot/backend/src/speech/: whisper.py
ai-interview-copilot/backend/tests/: conftest.py  test_api.py  test_interview.py
ai-interview-copilot/frontend/: next.config.js  package.json
ai-interview-copilot/frontend/src/app/: globals.css  layout.tsx  page.tsx
autonomous-browser-agent/: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
autonomous-browser-agent/alembic/: env.py
autonomous-browser-agent/alembic/versions/: 001_initial.py
autonomous-browser-agent/src/: config.py  main.py
autonomous-browser-agent/src/agent/: graph.py  nodes.py  prompts.py  state.py
autonomous-browser-agent/src/api/: routes.py  schemas.py
autonomous-browser-agent/src/browser/: controller.py  models.py
autonomous-browser-agent/src/db/: models.py  repository.py
autonomous-browser-agent/src/llm/: client.py  schemas.py
autonomous-browser-agent/src/utils/: helpers.py
autonomous-browser-agent/tests/: test_agent.py  test_api.py  test_browser.py
enterprise-rag-assistant/: .gitignore  docker-compose.yml
enterprise-rag-assistant/backend/: .env.example  Dockerfile  Makefile  alembic.ini  pyproject.toml
enterprise-rag-assistant/backend/alembic/versions/: 001_initial.py
enterprise-rag-assistant/backend/src/: config.py  main.py
enterprise-rag-assistant/backend/src/api/: routes.py  schemas.py
enterprise-rag-assistant/backend/src/db/: database.py  models.py  repository.py
enterprise-rag-assistant/backend/src/ingestion/: chunker.py  embedder.py  loader.py  pipeline.py
enterprise-rag-assistant/backend/src/llm/: client.py
enterprise-rag-assistant/backend/src/rag/: qa_chain.py  retriever.py
enterprise-rag-assistant/backend/tests/: test_api.py
multi-agent-research-assistant/: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
multi-agent-research-assistant/alembic/versions/: 001_initial.py
multi-agent-research-assistant/src/: config.py  main.py
multi-agent-research-assistant/src/agent/: factcheck_agent.py  graph.py  presentation_agent.py  report_writer.py  research_agent.py  source_collector.py  state.py  supervisor.py
multi-agent-research-assistant/src/api/: routes.py  schemas.py
multi-agent-research-assistant/src/db/: models.py  repository.py
multi-agent-research-assistant/src/llm/: client.py
multi-agent-research-assistant/tests/: test_agents.py  test_api.py
natural-language-data-analyst/: .gitignore  docker-compose.yml
natural-language-data-analyst/backend/: .env.example  Dockerfile  Makefile  alembic.ini  pyproject.toml
natural-language-data-analyst/backend/alembic/: env.py
natural-language-data-analyst/backend/alembic/versions/: 001_initial.py
natural-language-data-analyst/backend/src/: config.py  main.py
natural-language-data-analyst/backend/src/analyst/: engine.py
natural-language-data-analyst/backend/src/api/: routes.py  schemas.py
natural-language-data-analyst/backend/src/db/: database.py  models.py  repository.py
natural-language-data-analyst/backend/src/llm/: client.py
natural-language-data-analyst/backend/src/nl2sql/: converter.py
natural-language-data-analyst/backend/src/visualization/: charts.py  templates.py
natural-language-data-analyst/backend/tests/: test_api.py
(+2 files in other folders)
