[project]
name = "autonomous-browser-agent"
version = "0.1.0"
description = "AI agent that browses websites, clicks buttons, fills forms, and completes multi-step web tasks"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.4.0",
    "langchain-openai>=0.3.0",
    "playwright>=1.52.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "python-dotenv>=1.1.0",
    "beautifulsoup4>=4.13.0",
    "lxml>=5.3.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
    "mypy>=1.15.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
strict = false
python_version = "3.12"
ignore_missing_imports = true
